kubernetes/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: community-kitchen-api
  namespace: prod
  labels:
    app: community-kitchen-api
    environment: prod
spec:
  type: ClusterIP
  selector:
    app: community-kitchen-api
    environment: prod
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
