kubernetes/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-kitchen-api-ingress
  namespace: prod
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: community-kitchen-api
                port:
                  number: 80
